fix jumpscare, clean up classes after animation, enable font changes, minor changes

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,11 @@
   margin: auto;
 }
 
+.wrapper h1 {
+  font-family: var(--heading-font);
+  color: var(--secondary);
+}
+
 .hero {
   display: flex;
   justify-content: center;
