--- a/styles/global.css
+++ b/styles/global.css
@@ -3,13 +3,14 @@
 
   --accent: #e5707e;
   --secondary: #343434;
+  --dimmed: var(--secondary);
   --tertiary: #6b5cdf;
   --background: #fff1d6;
-
-  --font-family: "Poppins", sans-serif;
+  --heading-font: "Poppins", sans-serif;
+  --secondary-font: "Poppins", sans-serif;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&family=Zilla+Slab:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap");
 
 html,
 body {
@@ -18,8 +19,9 @@ body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
-  color: var(--secondary);
-  font-family: var(--font-family);
+  color: var(--dimmed);
+  font-family: var(--secondary-font);
+  font-weight: 300;
   background-color: var(--background);
   scroll-behavior: smooth;
 }
@@ -126,11 +128,6 @@ a:hover {
 @keyframes showMe {
   from {
     bottom: -500px;
-    opacity: 1;
-  }
-
-  88% {
-    bottom: 0;
   }
 
   to {
